<resources>
    <string name="app_name">MadLevel1Task2</string>
    <string name="title">Conjunction (AND)</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="t">T</string>
    <string name="f">F</string>
    <string name="ab">A^B</string>
    <string name="submit">Submit</string>

<!--    answers-->
    <string name="tt">T</string>
    <string name="tf">F</string>
    <string name="ft">F</string>
    <string name="ff">F</string>
</resources>